api/users/manifests/users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deploy
  labels:
    app: users
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 3
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users-cont
          image: wildbohana/users_microservice
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
