api/users/manifests/users-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users
spec:
  selector:
    app: users
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
